--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,30 +57,31 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
-    implementation 'com.squareup.retrofit2:retrofit:2.7.1'
-    implementation "com.squareup.retrofit2:converter-gson:2.6.2"
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.0.0'
-    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.2'
-    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.2'
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.1'
-
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation 'com.github.tbruyelle:rxpermissions:0.10.2' //权限
+    implementation 'com.squareup.retrofit2:retrofit:2.7.1' //retrofit
+    implementation "com.squareup.retrofit2:converter-gson:2.6.2"//gson
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'//rxjava2
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.0.0'//日志拦截
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.2'//刷新框架
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.2'//刷新框架头部
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.1'//适配器框架
+    implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'//缓存cookie
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"//lifecycle
+    implementation 'org.koin:koin-androidx-viewmodel:2.0.1'//viewModel
 //    // Koin for Android
 //    implementation 'org.koin:koin-android:2.0.1'
 //    // or Koin for Lifecycle scoping
 //    implementation 'org.koin:koin-androidx-scope:2.0.1'
     // or Koin for Android Architecture ViewModel
-    implementation 'org.koin:koin-androidx-viewmodel:2.0.1'
+
 
     //CoroutineScope
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
+//    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"//协程
 
 }
