--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,11 @@
     <application
         android:name=".app.BaseApp"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon_launcher"
         android:label="@string/app_name"
         android:launchMode="singleTop"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/icon_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup"
@@ -32,6 +32,8 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:launchMode="singleTask" />
+
+        <activity android:name=".ui.NavigationActivity" />
 
     </application>
 
